# person-follower-robot

./: .gitignore  README.md
docs/: setup_esp32.md
esp32/: CMakeLists.txt  doc_setup.md
esp32/components/bluetooth/: CMakeLists.txt  bluetooth_control.c
esp32/components/bt_control/: CMakeLists.txt  bluetooth_control.c  bluetooth_control.h
esp32/components/command_parser/: CMakeLists.txt  command_parser.c  command_parser.h
esp32/components/motor_control/: CMakeLists.txt  Kconfig.projbuild  motor_control.c  motor_control.h
esp32/components/operation_mode/: CMakeLists.txt  operation_mode.c  operation_mode.h
esp32/components/sensor/: CMakeLists.txt  sensor.c  sensor.h
esp32/components/uart_comm/: CMakeLists.txt  uart_comm.c  uart_comm.h
esp32/main/: CMakeLists.txt  main.c  tasks.c  tasks.h
pico/: CMakeLists.txt  doc_setup.md
pico/src/: main.c
